Creacion de los about me

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,5 +6,8 @@
         android:title="Settings"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/itemAboutMe"
+        android:title="About Me" />
 
 </menu>
