--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -7,7 +7,7 @@
     tools:context=".BookActivity">
 
     <ImageView
-        android:id="@+id/imgBook"
+        android:id="@+id/ivBook"
         android:layout_width="0dp"
         android:layout_height="250dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,55 +30,77 @@
         app:layout_constraintGuide_end="16dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTituloLibro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="TextView"
+        tools:text = "Los Juegos Del Hambre"
+        android:layout_gravity="center_horizontal"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />
+        app:layout_constraintTop_toBottomOf="@+id/cbLeido"
+        android:textSize="21sp"
+        android:textStyle="bold"
+        android:textColor="#101010"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvNombreAutor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_marginStart="159dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="153dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTituloLibro"
+        tools:text="Suzanne Collins"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvEditorial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:layout_marginStart="154dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="153dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvNombreAutor"
+        tools:text="Scholastic Press"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:layout_gravity="center_horizontal"/>
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/tvISBN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-        app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        android:layout_marginStart="129dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="130dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvEditorial"
+        tools:text="9891231512131231587"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:layout_gravity="center_horizontal"/>
 
     <CheckBox
-        android:id="@+id/checkBox2"
+        android:id="@+id/cbLeido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Leido"
+        android:textSize="16sp"
+        android:textStyle="italic"
         app:layout_constraintEnd_toStartOf="@+id/guideline_end"
-        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintHorizontal_bias="0.919"
         app:layout_constraintStart_toStartOf="@+id/guideline_start"
-        app:layout_constraintTop_toBottomOf="@+id/imgBook" />
+        app:layout_constraintTop_toBottomOf="@+id/ivBook" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
