--- a/app/src/main/res/layout/activity_about_me.xml
+++ b/app/src/main/res/layout/activity_about_me.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="529dp"
         android:autoText="false"
         android:gravity="center"
-        android:text="Aplicacion donde puedes archivar los libros que posees con una imagen que los identifiquen sacados por vos mismo, esta aplicacion fue creada por Belen Medina Roldán y Cristian Alejandro Rojas"
+        android:text="@string/text_about_me"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="34dp"
-        android:text="About Me"
+        android:text="@string/app_name"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.538"
@@ -51,7 +51,7 @@
         android:layout_marginBottom="25dp"
         android:autoLink="web"
         android:gravity="center"
-        android:text="Repository: https://github.com/belenmr/exlibris"
+        android:text="@string/app_repository"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
