--- a/app/src/main/res/layout/activity_edit_book.xml
+++ b/app/src/main/res/layout/activity_edit_book.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/etName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Titulo"
+                android:hint="@string/field_book_name"
                 android:inputType="text"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -57,8 +57,7 @@
                 android:id="@+id/etAuthor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
-                android:hint="Nombre y apellido del autor"
+                android:hint="@string/field_author"
                 android:inputType="text"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -76,7 +75,7 @@
                 android:id="@+id/etPublishingHouse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Editorial"
+                android:hint="@string/field_publishing_house"
                 android:inputType="text"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -94,7 +93,7 @@
                 android:id="@+id/etISBN"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="ISBN"
+                android:hint="@string/field_isbn"
                 android:inputType="text"
                 android:singleLine="true" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -115,7 +114,7 @@
                 android:layout_margin="8dp"
                 android:layout_weight="0.5"
                 android:backgroundTint="@color/secondaryDarkColor"
-                android:text="Cancelar" />
+                android:text="@string/button_cancel" />
 
             <Button
                 android:id="@+id/btnSave"
@@ -124,7 +123,7 @@
                 android:layout_margin="8dp"
                 android:layout_weight="0.5"
                 android:backgroundTint="@color/secondaryDarkColor"
-                android:text="Guardar" />
+                android:text="@string/button_save" />
         </LinearLayout>
 
 
