--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -8,7 +8,7 @@
     android:background="@color/primaryColor"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    app:title="Mi Biblioteca"
+    app:title="@string/toolbar_default_name"
     app:titleTextColor="@color/primaryTextColor"
     tools:visibility="visible">
 
