--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        
+
         <TextView
             android:id="@+id/tv_Title"
             android:layout_width="wrap_content"
@@ -35,6 +35,18 @@
             android:textStyle="italic"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"/>
+
+        <TextView
+            android:id="@+id/tv_read"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@color/primaryDarkColor"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            tools:text="@string/checkbox_pendiente" />
 
     </LinearLayout>
 
